--- a/src/styles/sass/abstracts/_mixins.scss
+++ b/src/styles/sass/abstracts/_mixins.scss
@@ -9,6 +9,7 @@
   border-radius: var(--size-3);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  backdrop-filter: blur(var(--size-5));
 }
 
 // Fade In Animation
